--- a/index.htm
+++ b/index.htm
@@ -10,20 +10,20 @@
 	<link rel="canonical" href="https://sikatslott.com/">
     <link rel="icon" type="image/png" href="https://i.ibb.co/3RwW24L/favicon.png">
     <link rel="preconnect" href="https://sikatslott.com/" as="crossorigin">
-    <title>Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap</title>
-    <meta name="description" content="Sikatslot adalah situs slot maxwin yang menyediakan permainan terbaik dari provider ternama seperti pragmatic play & pgsoft. Lihat koleksi terlengkap games slot online & slot gacor gampang menang banyak bonus cashback serta deposit termurah.">
+    <title>Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru</title>
+    <meta name="description" content="Sikatslot adalah situs link alternatif resmi Sikat Slot online yang sudah terbukti paling gampang menang. Sikatslot juga banyak direkomendasikan oleh para pemain yang merasakan kemenangan maxwin.">
 	<meta property="og:site_name" content="Sikatslot">
 	<meta property="og:url" content="https://sikatslott.com/">
-	<meta property="og:title" content="Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap">
+	<meta property="og:title" content="Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru">
 	<meta property="og:type" content="product">
-	<meta property="og:description" content="Sikatslot adalah situs slot maxwin yang menyediakan permainan terbaik dari provider ternama seperti pragmatic play & pgsoft. Lihat koleksi terlengkap games slot online & slot gacor gampang menang banyak bonus cashback serta deposit termurah.
+	<meta property="og:description" content="Sikatslot adalah situs link alternatif resmi Sikat Slot online yang sudah terbukti paling gampang menang. Sikatslot juga banyak direkomendasikan oleh para pemain yang merasakan kemenangan maxwin.
 	<meta property="og:image" content="https://i.ibb.co/QKTDSCS/slot.webp?v=1703212941">
 	<meta property="og:image:secure_url" content="https://i.ibb.co/QKTDSCS/slot.webp?v=1703212941">
 	<meta property="og:image:width" content="350">
 	<meta property="og:image:height" content="340"><meta property="og:price:amount" content="5.000,00">
 	<meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap">
-	<meta name="twitter:description" content="Sikatslot adalah situs slot maxwin yang menyediakan permainan terbaik dari provider ternama seperti pragmatic play & pgsoft. Lihat koleksi terlengkap games slot online & slot gacor gampang menang banyak bonus cashback serta deposit termurah.
+	<meta name="twitter:title" content="Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru">
+	<meta name="twitter:description" content="Sikatslot adalah situs link alternatif resmi Sikat Slot online yang sudah terbukti paling gampang menang. Sikatslot juga banyak direkomendasikan oleh para pemain yang merasakan kemenangan maxwin.
 
 
     <script src="https://981cef-2.myshopify.com/cdn/shop/t/2/assets/constants.js?v=58251544750838685771703182316" defer="defer"></script>
@@ -557,10 +557,10 @@ Shopify.routes.root = "/";</script>
     </script>
   <link href="https://monorail-edge.shopifysvc.com" rel="dns-prefetch">
 <script>(function(){if ("sendBeacon" in navigator && "performance" in window) {var session_token = document.cookie.match(/_shopify_s=([^;]*)/);function handle_abandonment_event(e) {var entries = performance.getEntries().filter(function(entry) {return /monorail-edge.shopifysvc.com/.test(entry.name);});if (!window.abandonment_tracked && entries.length === 0) {window.abandonment_tracked = true;var currentMs = Date.now();var navigation_start = performance.timing.navigationStart;var payload = {shop_id: 62177902747,url: window.location.href,navigation_start,duration: currentMs - navigation_start,session_token: session_token && session_token.length === 2 ? session_token[1] : "",page_type: "product"};window.navigator.sendBeacon("https://monorail-edge.shopifysvc.com/v1/produce", JSON.stringify({schema_id: "online_store_buyer_site_abandonment/1.1",payload: payload,metadata: {event_created_at_ms: currentMs,event_sent_at_ms: currentMs}}));}}window.addEventListener('pagehide', handle_abandonment_event);}}());</script>
-<script id="web-pixels-manager-setup">(function e(e,n,a,t,o,r,i){var s=null!==e,l=("function"==typeof BigInt&&BigInt.toString().indexOf("[native code]")?"modern":"legacy").substring(0,1),c=t.substring(0,1);if(s){window.Shopify=window.Shopify||{};var d=window.Shopify;d.analytics=d.analytics||{};var u=d.analytics;u.replayQueue=[],u.publish=function(e,n,a){u.replayQueue.push([e,n,a])};try{self.performance.mark("wpm:start")}catch(e){}}var p,f,y,h,v,m,w,g,b,_=[a,"/wpm","/",c,r,l,".js"].join("");f=(p={src:_,async:!0,onload:function(){if(e){var a=window.webPixelsManager.init(e);null==n||n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],o=e[2];a.publishCustomEvent(n,t,o)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor}},onerror:function(){var n=(null==e?void 0:e.storefrontBaseUrl)?e.storefrontBaseUrl.replace(/\/$/,""):self.location.origin,a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),t=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:o||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(_," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,t))return!0}catch(e){}var r=new XMLHttpRequest;try{return r.open("POST",a,!0),r.setRequestHeader("Content-Type","text/plain"),r.send(t),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}}).src,y=p.async,h=void 0===y||y,v=p.onload,m=p.onerror,w=document.createElement("script"),g=document.head,b=document.body,w.async=h,w.src=f,v&&w.addEventListener("load",v),m&&w.addEventListener("error",m),g?g.appendChild(w):b?b.appendChild(w):console.error("Did not find a head or body element to append the script")})({shopId: 62177902747,storefrontBaseUrl: "https://981cef-2.myshopify.com",cdnBaseUrl: "https://981cef-2.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["web_pixels_async_pixel_refactor","web_pixels_manager_performance_improvement"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0570","apiClientId":"shopify-pixel","type":"APP"},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0570","apiClientId":"shopify-pixel","type":"CUSTOM"}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"43923359957147","image":{"src":"\/\/981cef-2.myshopify.com\/cdn\/shop\/files\/zeus_f02a8090-089d-4bb3-bf34-b6812ec050f9.gif?v=1703212941"},"price":{"amount":20000.0,"currencyCode":"IDR"},"product":{"id":"7818426122395","title":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","untranslatedTitle":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","url":"\/products\/Sikatslot","vendor":"Sikatslot","type":"Sikatslot"},"sku":"","title":"Default Title","untranslatedTitle":"Default Title"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"43923359957147","image":{"src":"\/\/981cef-2.myshopify.com\/cdn\/shop\/files\/zeus_f02a8090-089d-4bb3-bf34-b6812ec050f9.gif?v=1703212941"},"price":{"amount":20000.0,"currencyCode":"IDR"},"product":{"id":"7818426122395","title":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","untranslatedTitle":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","url":"\/products\/Sikatslot","vendor":"Sikatslot","type":"Sikatslot"},"sku":"","title":"Default Title","untranslatedTitle":"Default Title"}});},"https://981cef-2.myshopify.com/cdn","browser","0.0.412","80cd6a5fw8efabb83pbabe92ddm0cb690ee",["web_pixels_async_pixel_refactor","web_pixels_manager_performance_improvement"]);</script>  <script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
+<script id="web-pixels-manager-setup">(function e(e,n,a,t,o,r,i){var s=null!==e,l=("function"==typeof BigInt&&BigInt.toString().indexOf("[native code]")?"modern":"legacy").substring(0,1),c=t.substring(0,1);if(s){window.Shopify=window.Shopify||{};var d=window.Shopify;d.analytics=d.analytics||{};var u=d.analytics;u.replayQueue=[],u.publish=function(e,n,a){u.replayQueue.push([e,n,a])};try{self.performance.mark("wpm:start")}catch(e){}}var p,f,y,h,v,m,w,g,b,_=[a,"/wpm","/",c,r,l,".js"].join("");f=(p={src:_,async:!0,onload:function(){if(e){var a=window.webPixelsManager.init(e);null==n||n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],o=e[2];a.publishCustomEvent(n,t,o)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor}},onerror:function(){var n=(null==e?void 0:e.storefrontBaseUrl)?e.storefrontBaseUrl.replace(/\/$/,""):self.location.origin,a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),t=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:o||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(_," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,t))return!0}catch(e){}var r=new XMLHttpRequest;try{return r.open("POST",a,!0),r.setRequestHeader("Content-Type","text/plain"),r.send(t),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}}).src,y=p.async,h=void 0===y||y,v=p.onload,m=p.onerror,w=document.createElement("script"),g=document.head,b=document.body,w.async=h,w.src=f,v&&w.addEventListener("load",v),m&&w.addEventListener("error",m),g?g.appendChild(w):b?b.appendChild(w):console.error("Did not find a head or body element to append the script")})({shopId: 62177902747,storefrontBaseUrl: "https://981cef-2.myshopify.com",cdnBaseUrl: "https://981cef-2.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["web_pixels_async_pixel_refactor","web_pixels_manager_performance_improvement"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0570","apiClientId":"shopify-pixel","type":"APP"},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0570","apiClientId":"shopify-pixel","type":"CUSTOM"}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"43923359957147","image":{"src":"\/\/981cef-2.myshopify.com\/cdn\/shop\/files\/zeus_f02a8090-089d-4bb3-bf34-b6812ec050f9.gif?v=1703212941"},"price":{"amount":20000.0,"currencyCode":"IDR"},"product":{"id":"7818426122395","title":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","untranslatedTitle":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","url":"\/products\/Sikatslot","vendor":"Sikatslot","type":"Sikatslot"},"sku":"","title":"Default Title","untranslatedTitle":"Default Title"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"43923359957147","image":{"src":"\/\/981cef-2.myshopify.com\/cdn\/shop\/files\/zeus_f02a8090-089d-4bb3-bf34-b6812ec050f9.gif?v=1703212941"},"price":{"amount":20000.0,"currencyCode":"IDR"},"product":{"id":"7818426122395","title":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","untranslatedTitle":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","url":"\/products\/Sikatslot","vendor":"Sikatslot","type":"Sikatslot"},"sku":"","title":"Default Title","untranslatedTitle":"Default Title"}});},"https://981cef-2.myshopify.com/cdn","browser","0.0.412","80cd6a5fw8efabb83pbabe92ddm0cb690ee",["web_pixels_async_pixel_refactor","web_pixels_manager_performance_improvement"]);</script>  <script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
 window.ShopifyAnalytics.meta = window.ShopifyAnalytics.meta || {};
 window.ShopifyAnalytics.meta.currency = 'IDR';
-var meta = {"product":{"id":7818426122395,"gid":"gid:\/\/shopify\/Product\/7818426122395","vendor":"Sikatslot","type":"Sikatslot","variants":[{"id":43923359957147,"price":2000000,"name":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","public_title":null,"sku":""}]},"page":{"pageType":"product","resourceType":"product","resourceId":7818426122395}};
+var meta = {"product":{"id":7818426122395,"gid":"gid:\/\/shopify\/Product\/7818426122395","vendor":"Sikatslot","type":"Sikatslot","variants":[{"id":43923359957147,"price":2000000,"name":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","public_title":null,"sku":""}]},"page":{"pageType":"product","resourceType":"product","resourceId":7818426122395}};
 for (var attr in meta) {
   window.ShopifyAnalytics.meta[attr] = meta[attr];
 }</script>
@@ -715,8 +715,8 @@ for (var attr in meta) {
       var token = match? match[1]: undefined;
       if (!hasLoggedConversion(token)) {
         setCookieIfConversion(token);
-        window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"IDR","variantId":43923359957147,"productId":7818426122395,"productGid":"gid:\/\/shopify\/Product\/7818426122395","name":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","price":"20000.00","sku":"","brand":"Sikatslot","variant":null,"category":"Sikatslot","nonInteraction":true});
-      window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"IDR","variantId":43923359957147,"productId":7818426122395,"productGid":"gid:\/\/shopify\/Product\/7818426122395","name":"Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap","price":"20000.00","sku":"","brand":"Sikatslot","variant":null,"category":"Sikatslot","nonInteraction":true,"referer":"https:\/\/981cef-2.myshopify.com\/products\/Sikatslot"});
+        window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"IDR","variantId":43923359957147,"productId":7818426122395,"productGid":"gid:\/\/shopify\/Product\/7818426122395","name":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","price":"20000.00","sku":"","brand":"Sikatslot","variant":null,"category":"Sikatslot","nonInteraction":true});
+      window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"IDR","variantId":43923359957147,"productId":7818426122395,"productGid":"gid:\/\/shopify\/Product\/7818426122395","name":"Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru","price":"20000.00","sku":"","brand":"Sikatslot","variant":null,"category":"Sikatslot","nonInteraction":true,"referer":"https:\/\/981cef-2.myshopify.com\/products\/Sikatslot"});
       }
     });
 
@@ -1416,10 +1416,10 @@ Item added to your cart
                 class="product__text inline-richtext caption-with-letter-spacing"
                 
               >Sikatslot</p><div class="product__title" >
-                <h1>Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap</h1>
+                <h1>Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru</h1>
                 <a href="/" class="product__title">
                   <h2 class="h1">
-                    Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap
+                    Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru
                   </h2>
                 </a>
               </div><div class="no-js-hidden" id="price-template--16284540633243__main" role="status" >
@@ -1466,7 +1466,7 @@ Item added to your cart
                   
 <input type="hidden" name="product-id" value="7818426122395" /></form></div><div class="product__description rte quick-add-hidden" >
                   <a href="https://tinyurl.com/daftaresmi" title="Sikatslot"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://i.ibb.co/1vbYvwf/daftar.gif" alt="Sikatslot"> </a>
-<p>Sikatslot adalah situs slot maxwin yang menyediakan permainan terbaik dari provider ternama seperti pragmatic play & pgsoft. Lihat koleksi terlengkap games slot online & slot gacor gampang menang banyak bonus cashback serta deposit termurah.
+<p>Sikatslot adalah situs link alternatif resmi Sikat Slot online yang sudah terbukti paling gampang menang. Sikatslot juga banyak direkomendasikan oleh para pemain yang merasakan kemenangan maxwin.
                 </div><div
                 id="Quantity-Form-template--16284540633243__main"
                 class="product-form__input product-form__quantity"
@@ -1498,7 +1498,7 @@ Item added to your cart
                 <div class="price-per-item__container">
                   <quantity-input class="quantity" data-url="/products/Sikatslot" data-section="template--16284540633243__main">
                     <button class="quantity__button no-js-hidden" name="minus" type="button">
-                      <span class="visually-hidden">Decrease quantity for Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap</span>
+                      <span class="visually-hidden">Decrease quantity for Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru</span>
                       <svg
   xmlns="http://www.w3.org/2000/svg"
   aria-hidden="true"
@@ -1525,7 +1525,7 @@ Item added to your cart
                       form="product-form-template--16284540633243__main"
                     />
                     <button class="quantity__button no-js-hidden" name="plus" type="button">
-                      <span class="visually-hidden">Increase quantity for Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap</span>
+                      <span class="visually-hidden">Increase quantity for Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru</span>
                       <svg
   xmlns="http://www.w3.org/2000/svg"
   aria-hidden="true"
@@ -1704,7 +1704,7 @@ Item added to your cart
     srcset="https://i.ibb.co/QKTDSCS/slot.webp?v=1703212941 350w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
     src="https://i.ibb.co/QKTDSCS/slot.webp?v=1703212941&width=1445"
-    alt="Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap"
+    alt="Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru"
     loading="lazy"
     width="1100"
     height="1069"
@@ -1745,7 +1745,7 @@ Item added to your cart
     {
       "@context": "http://schema.org/",
       "@type": "Product",
-      "name": "Sikatslot > Situs Slot Maxwin Terbaik & Koleksi Games Slot Terlengkap",
+      "name": "Sikatslot - Situs Daftar & Login Resmi Link Sikat Slot Online Terbaru",
       "url": "https://sikatslott.com/",
       "image": [
           "https://i.ibb.co/QKTDSCS/slot.webp?v=1703212941\u0026width=1920"
